--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "joi": "^17.12.3",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.4",
     "sequelize": "^6.37.2"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.6.2"
   }
 }
