--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "express": "^4.19.2",
     "joi": "^17.12.3",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.4",
+    "nodemailer": "^6.9.13",
     "sequelize": "^6.37.2"
   },
   "devDependencies": {
