--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.4",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
     "sequelize": "^6.37.2"
   },
