--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "handlebars": "^4.7.8",
     "joi": "^17.12.3",
     "jsonwebtoken": "^9.0.2",
@@ -31,6 +32,9 @@
     "mysql2": "^3.9.4",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.37.2"
   },
   "devDependencies": {
