--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon node index.js"
   },
   "repository": {
     "type": "git",
@@ -33,6 +33,7 @@
     "mysql2": "^3.9.4",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
+    "nodemon": "^3.1.3",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
