--- a/.env
+++ b/.env
@@ -6,11 +6,11 @@ EMAILFROM='harshlathiya91@gmail.com'
 EMAILPASSWORD='ejlzrfzgkzvcpcpv'
 clientID='1035647780616-iioi7ddkv1siej894gi9nanadgmm60jh.apps.googleusercontent.com'
 clientSecret='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'
-# DATABASE='leave_management'
-# USERNAMEDB='root'
-# PASSWORD='password'
-# HOST='localhost'
 DATABASE='leave_management'
-USERNAMEDB='admin'
-PASSWORD='LmsHarshLathiya'
-HOST='lms.c50e6s4ukuni.us-east-2.rds.amazonaws.com'
+USERNAMEDB='root'
+PASSWORD='password'
+HOST='localhost'
+# DATABASE='leave_management'
+# USERNAMEDB='admin'
+# PASSWORD='LmsHarshLathiya'
+# HOST='lms.c50e6s4ukuni.us-east-2.rds.amazonaws.com'
